# fcp-rust

./: .mcp.json  Cargo.toml  README.md
.claude-plugin/: plugin.json
scripts/: run.sh
src/: bridge.rs  error.rs  main.rs
src/fcpcore/: event_log.rs  formatter.rs  parsed_op.rs  session.rs  tokenizer.rs
src/lsp/: client.rs  lifecycle.rs  transport.rs  types.rs
src/mcp/: params.rs  server.rs
src/resolver/: fuzzy.rs  index.rs
