[package]
name = "fcp-rust"
version = "0.1.3"
edition = "2021"
description = "MCP server for Rust codebases via rust-analyzer"
repository = "https://github.com/aetherwing-io/fcp-rust"
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
